--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,6 @@ terraform/.terraform
 terraform/.terraform.lock.hcl
 terraform/terraform.tfstate.backup
 terraform/terraform.tfstate
+.git
+scripts/lambda_function.zip
+terraform/lambda_function.zip
